# automata_object_detection-

./: .gitignore  Dockerfile  Dockerfile.orbbec  README.md  docker-compose.orbbec.yml  docker-compose.yml  object_extraction.py  pyproject.toml  requirements.txt  test_app_imports.py  test_imports.py
Log/: OrbbecSDK.log.txt
mqtt/auth/: pwd.txt
mqtt/mosquitto-config/: mosquitto.conf
src/automata_detection/: __init__.py  camera.py  camera_orbbec.py  cli.py  config.py  inference.py  model.py  mqtt.py  pose.py
src/automata_detection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
